--- a/spring/springmvc-expense-report/pom.xml
+++ b/spring/springmvc-expense-report/pom.xml
@@ -147,13 +147,22 @@
 			<version>1.2</version>
 		</dependency>
 		
+		
+		<!-- CGLIB -->
+		<dependency>
+			<groupId>cglib</groupId>
+			<artifactId>cglib</artifactId>
+			<version>2.2.2</version>
+		</dependency>
+            
+		
 		<!-- POSTGRE SQL -->
 		
 		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-envers</artifactId>
-			<version>3.5.0-Final</version>
-		</dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>4.0.0.Final</version>
+        </dependency>
 		<dependency>
 			<groupId>postgresql</groupId>
 			<artifactId>postgresql</artifactId>
