--- a/spring/springmvc-expense-report/src/main/resources/config.properties
+++ b/spring/springmvc-expense-report/src/main/resources/config.properties
@@ -1,1 +1,6 @@
 debug = true
+database.host = 192.168.6.30
+database.name = postgres
+database.password = postgres
+database.username = postgres
+database.url = jdbc:postgresql://192.168.6.30:5432/postgres
