--- a/spring/springmvc-expense-report/src/main/webapp/WEB-INF/web.xml
+++ b/spring/springmvc-expense-report/src/main/webapp/WEB-INF/web.xml
@@ -51,5 +51,11 @@
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping> 
+	 <listener>
+    <listener-class>
+      org.springframework.security.web.session.HttpSessionEventPublisher
+    </listener-class>
+  </listener> 
+        
 
 </web-app>
