--- a/spring/springmvc-expense-report/src/main/webapp/WEB-INF/web.xml
+++ b/spring/springmvc-expense-report/src/main/webapp/WEB-INF/web.xml
@@ -3,13 +3,14 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
-
-	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring/root-context.xml,
-		/WEB-INF/spring-security.xml</param-value>
-	</context-param>  
+        <context-param>
+            <param-name>contextClass</param-name>
+            <param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
+        </context-param>
+        <context-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>com.springsource.html5expense.config</param-value>
+        </context-param>
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -22,8 +23,7 @@
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
 			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml ,
-			/WEB-INF/spring/root-context.xml ,
-			/WEB-INF/spring-security.xml</param-value>
+			</param-value>
 		</init-param>
 		<load-on-startup>2</load-on-startup>
 	</servlet>
