Database properties added.

--- a/spring/springmvc-expense-report/src/main/resources/config.properties
+++ b/spring/springmvc-expense-report/src/main/resources/config.properties
@@ -1,6 +1,7 @@
 debug = true
-database.host = 192.168.6.30
+database.host = localhost
 database.name = postgres
 database.password = postgres
 database.username = postgres
-database.url = jdbc:postgresql://192.168.6.30:5432/postgres
+database.port = 5432
+transactionTimeout = 43200
