--- a/spring/springmvc-expense-report/pom.xml
+++ b/spring/springmvc-expense-report/pom.xml
@@ -33,6 +33,12 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 		
+		     <dependency>
+            <groupId>org.cloudfoundry</groupId>
+            <artifactId>cloudfoundry-runtime</artifactId>
+            <version>0.8.2</version>
+        </dependency>
+		
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aop</artifactId>
@@ -238,6 +244,18 @@
             
 		
 	</dependencies>
+	
+	<repositories>
+    <repository>
+        <id>org.springframework.maven.milestone</id>
+        <name>Spring Framework Maven Milestone Repository</name>
+        <url>http://maven.springframework.org/milestone</url>
+    </repository>
+ 
+    <!-- additional repository declarations -->
+</repositories>
+	
+	
     <build>
         <plugins>
             <plugin>
